Fix broken test

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>God Bless You!</h1>
+    <h1>God Bless You</h1>
     <h2>Thank you Jesus</h2>
     <h1>The King of kings and the Lord of lords</h1>
     <script src="bundle.js"></script>
